# solaredge_modbus

./: Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  registers.rs
