[package]
name = "solaredge_modbus"
version = "0.1.0"
authors = ["daniel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-modbus = { version = "*", default-features = false, features = ["rtu"] }
tokio-serial = "4.3.3"
tokio-test = "0.3.0"